<resources>
    <string name="app_name">Inventory Management</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="newUser">Add new User?</string>
    <string name="password">Password</string>
    <string name="addItem">Add your Item:</string>
    <string name="add">Add Item</string>
    <string name="deleteItem">Delete</string>
</resources>