<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:background="#31FFFFFF"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_below="@id/title"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="@string/username"
        android:background="#31FFFFFF"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passWord"
        android:layout_below="@id/userName"
        android:hint="@string/username"
        android:autofillHints="@string/username"
        android:inputType="textPassword"
        android:background="#31ffffff"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_key_24"
        android:drawablePadding="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_below="@id/passWord"
        android:text="@string/login"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newUser"
        android:layout_below="@id/loginButton"
        android:textColor="@color/white"
        android:text="@string/newUser"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>




</RelativeLayout>