<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/addItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/addItem"
        android:background="#31FFFFFF"
        android:drawablePadding="20dp"
        android:hint="@string/addItem"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addItem"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add" />

    <Button
        android:id="@id/deleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/deleteItem" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deleteItem" >

    </TextView>



</RelativeLayout>